# migration-example

./: Makefile  README.md  nicks-pre.chainspec.json  types.json
pallets/nicks/: Cargo.toml
pallets/nicks/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
